5.network-deployment/redmine-dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
  labels:
    app: redmine
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
     maxSurge: 0
     maxUnavailable: 1
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
        - name: redmine
          image: redmine:4.1.1
          ports:
            - containerPort: 3000
              protocol: TCP
