5.network-deployment/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: redmine
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
