5.network-deployment/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
