5.network-deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redmine-db
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: app
          servicePort: 80
